--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,42 @@
 /* Components */
+@import "components/top-var.css";
+@import "components/clock.css";
+@import "components/user.css";
+@import "components/todo-input.css";
+@import "components/quote.css";
+@import "components/todo-list.css";
 
 /* screen */
 @import "screen/snow.css";
+@import "screen/box.css";
 @import "screen/background.css";
 
 body {
   color: whitesmoke;
   overflow: hidden;
+  font-family: "Lobster", cursive;
+  margin: 0;
+
+  height: 100vh;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hidden {
   display: none;
+}
+
+.visi {
+  visibility: hidden;
+}
+
+.apple {
+  font-family: system-ui, -apple-system;
+}
+
+.filter {
+  filter: blur(5px);
 }
