js파일 주석 제거(수업 배운 내용)

--- a/css/components/quote.css
+++ b/css/components/quote.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 60px;
+  transform: translateY(15px);
 }
 
 #quote span:nth-child(2) {
