--- a/css/components/clock.css
+++ b/css/components/clock.css
@@ -2,9 +2,11 @@
   display: flex;
 
   justify-content: center;
-  font-size: 70px;
+
   text-shadow: -2px 2px 3px black;
   font-family: "Lobster", cursive;
+
+  font-size: 180%;
 }
 
 #clock {
