--- a/css/components/quote.css
+++ b/css/components/quote.css
@@ -5,43 +5,52 @@
   justify-content: center;
   height: 60px;
   transform: translateY(15px);
+
+  margin: 30px 0;
+
+  font-size: 50%;
 }
 
 #quote span:nth-child(2) {
-  color: rgb(199, 199, 199);
-  animation: alternate 3s forwards;
+  position: absolute;
+  color: rgba(199, 199, 199, 0.7);
+  text-shadow: 1px 1px 1.5px gray;
+  opacity: 0;
 }
 
 @keyframes quoteup {
   from {
   }
   to {
-    transform: translateY(-20%);
+    transform: translateY(-60%);
   }
 }
 
-@keyframes authordown {
+@keyframes authorDown {
   from {
-    opacity: 0;
   }
   to {
     opacity: 1;
+    transform: translateY(60%);
   }
 }
 
 @keyframes quotedown {
   from {
-    transform: translateY(-20%);
+    transform: translateY(-60%);
   }
   to {
     transform: translateY(0%);
   }
 }
 
-@keyframes authorup {
+@keyframes authorUp {
   from {
+    opacity: 1;
+    transform: translateY(60%);
   }
   to {
     opacity: 0;
+    transform: translateY(0%);
   }
 }
