--- a/css/components/todo-list.css
+++ b/css/components/todo-list.css
@@ -1,27 +1,3 @@
-footer {
-  font-family: system-ui, -apple-system;
-  font-size: 20px;
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: 50px;
-  padding: 20px;
-  box-sizing: border-box;
-}
-
-footer > span {
-  text-shadow: -2px 2px 3px black;
-  padding: 5px;
-}
-
-footer > span:hover {
-  cursor: pointer;
-  border-radius: 10px;
-  background-color: rgba(128, 128, 128, 0.4);
-}
-
 .todo-box {
   height: 300px;
   width: 300px;
@@ -118,19 +94,19 @@ footer > span:hover {
 
 .Alarm {
   position: absolute;
-  width: 30px;
-  height: 30px;
+  width: 4.5vw;
+  height: 4.5vw;
   border-radius: 50%;
   background-color: skyblue;
-  bottom: 52px;
-  right: 50px;
+  bottom: 120%;
+  right: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .Alarm span {
-  font-size: 80%;
+  font-size: 3vw;
   text-shadow: 1px 1px 1.5px black;
 }
 
@@ -139,10 +115,10 @@ footer > span:hover {
   z-index: -1;
   width: 0;
   height: 0;
-  border-bottom: 10px solid transparent;
-  border-top: 10px solid skyblue;
-  border-left: 3px solid transparent;
-  border-right: 3px solid transparent;
-  bottom: -18px;
-  right: 12px;
+  border-bottom: 3vw solid transparent;
+  border-top: 3vw solid skyblue;
+  border-left: 1vw solid transparent;
+  border-right: 1vw solid transparent;
+  bottom: -85%;
+  right: 29%;
 }
