--- a/css/components/top-var.css
+++ b/css/components/top-var.css
@@ -4,14 +4,15 @@
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
 }
 
 #today {
-  font-size: 30px;
+  font-size: 3vw;
   font-weight: 900;
   font-family: "Lobster", cursive;
+  text-shadow: 1px 1px 1.5px black;
 }
 
 #weather {
@@ -21,14 +22,15 @@
   align-items: center;
 
   font-style: oblique;
+  font-size: 2vw;
 
   text-shadow: 1px 1px 1.5px black;
 }
 
 .temp {
-  font-size: 21px;
+  font-size: 100%;
 }
 
 .city {
-  font-size: 14px;
+  font-size: 80%;
 }
