--- a/css/components/user.css
+++ b/css/components/user.css
@@ -1,18 +1,22 @@
 #greeting {
   margin: 0;
-  font-size: 50px;
+
   font-family: system-ui, -apple-system;
   text-shadow: 2px 2px 3px black;
+
+  font-size: 100%;
 }
 
 #login-form input {
   background: none;
   border: none;
   border-bottom: 2px solid whitesmoke;
-  font-size: 30px;
+
   color: whitesmoke;
   text-align: center;
   transform: translateY(30px);
+
+  font-size: 80%;
 }
 
 #login-form input::placeholder {
