--- a/css/screen/box.css
+++ b/css/screen/box.css
@@ -12,6 +12,8 @@ main {
   align-items: center;
   position: relative;
   flex: 1 1 auto;
+
+  font-size: 5vw;
 }
 
 .main-box {
@@ -23,7 +25,6 @@ main {
 
   width: 70%;
   height: 100%;
-  padding: 20px 0px;
 
   background-color: rgba(0, 0, 0, 0.4);
 
